@@ -77,6 +77,8 @@ static void compatInit(Compatibility_t &c)
     c.fix_swooper_start_while_inactive = true;
     c.fix_FreezeNPCs_no_reset = false;
     c.world_map_stars_show_policy = Compatibility_t::STARS_UNSPECIFIED;
+    // 1.3.5.3
+    c.require_ground_to_enter_warps = false;
     // 1.3.6
 
 
@@ -197,6 +199,8 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
     compat.read("fix-player-filter-bounce", c.fix_player_filter_bounce, c.fix_player_filter_bounce);
     compat.read("fix-player-downward-clip", c.fix_player_downward_clip, c.fix_player_downward_clip);
     compat.read("fix-npc-downward-clip", c.fix_npc_downward_clip, c.fix_npc_downward_clip);
+    // 1.3.5.3
+    compat.read("require-ground-to-enter-warps", c.require_ground_to_enter_warps, c.require_ground_to_enter_warps);
     // 1.3.6
     compat.endGroup();
 }
