@@ -62,6 +62,8 @@ struct Compatibility_t
         STARS_SHOW_COLLECTED_AND_AVAILABLE = 2
     };
     int world_map_stars_show_policy;
+    // 1.3.5.3
+    bool require_ground_to_enter_warps;
     // 1.3.6
 
 
